--- a/portfolio.html
+++ b/portfolio.html
@@ -196,6 +196,27 @@
 			</ul>
 		</div>
 
+		<!--mailing-->
+
+<div class="mailing">
+<form class="mailing-form">
+	<h3 class="mailing-title">subscribe to newsletter</h3>
+	<div class="mailing-wrapper">
+		<label >
+			<input class="mailing-input" type="email" name="email" placeholder="E-mail">
+		</label>
+
+	<button  type="submit" class="mailing-submit">Subscribe
+		<svg width="24" height="24" class="mailing-svg">
+			<use href=./IMG/sprite.svg#icon-icon-send></use>
+		</svg>
+	</button>
+	</div>
+</form>
+</div>
+
+
+
 		</div>
 	</footer>
 </body>
