--- a/index.html
+++ b/index.html
@@ -272,16 +272,121 @@
 			</ul>
 		</div>
 
+
+		<!--mailing-->
+
+<div class="mailing">
+<form class="mailing-form">
+	<h3 class="mailing-title">subscribe to newsletter</h3>
+	<div class="mailing-wrapper">
+		<label >
+			<input class="mailing-input" type="email" name="email" placeholder="E-mail">
+		</label>
+
+	<button  type="submit" class="mailing-submit">Subscribe
+		<svg width="24" height="24" class="mailing-svg">
+			<use href=./IMG/sprite.svg#icon-icon-send></use>
+		</svg>
+	</button>
+	</div>
+</form>
+</div>
+
+
 		</div>
 	</footer>
 
 
-
+<!-- MOdAL  -->
 
 	<div class="backdrop is-hidden" data-modal>
-	<div class="modal"> <button class="button-modal" data-modal-close>
-		<svg width="" height=""><use href="./IMG/sprite.svg#close"></use></svg>
-</button></div>
+	<div class="modal"> 
+		<button class="button-modal" data-modal-close>
+		<svg width="" height=""><use href="./IMG/sprite.svg#close"></use></svg></button>
+
+		<form class="form">
+		<p class="form-act ">Leave your details, we will call you back</p>
+
+		<div class="form-field">
+
+		<label class="form-label">
+		<span class="form-about">Name</span>
+	<input class="form-input" type="text" name="name" placeholder=" ">
+	<svg class="form-svg" width="18" height="18">
+		<use href="./IMG/sprite.svg#User"></use></svg>
+		</label>
+		</div>
+
+	
+
+<div class="form-field">
+		  <label class="form-label">
+			<span class="form-about">Phone number</span>
+	<input class="form-input" type="tel" name="tel" placeholder="">
+	<svg class="form-svg" width="18" height="18"><use href="./IMG/sprite.svg#Tel"></use></svg>
+  </label>
+</div>
+
+<div class="form-field">
+	<label class="form-label">
+	<span class="form-about">Mail</span>
+		<input class="form-input" type="email" name="email" placeholder="">
+	<svg class="form-svg" width="18" height="18"><use href="./IMG/sprite.svg#Mail"></use></svg>
+  </label>
+</div>
+
+
+
+	<div class="form-field">
+		<label class="form-label">
+			<span class="form-about">Coment</span>
+			<textarea name="coment"  class="form-coment-textarea" placeholder="Imput text"></textarea>
+		</label>
+	</div>
+
+	<div class="check">
+	<label  class="form-check-label">
+		<input type="checkbox" name="check" class="form-check-input" placeholder="">
+		<span class="checkbox-svg"></span>
+		I Agree <a href="" class="check-link">Terms of an agreement</a>
+	</label>
+	</div>
+
+	<button type="submit" class="form-submit">Submit</button>
+
+</form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 </div>
 
 
